# DevSecOps

./: .editorconfig  .gitignore  CONTRIBUTORS.md  NOTICES.md  README.md  SECURITY.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: README.md  after-test-repo-auditor.yml  codeql.yml  execute-repository-auditor.yml  on-pullrequest.yml  repository-audit.yml  review.yml  run-full-audit.yml  run-single-audit.yml  scorecard.yml  test-repo-auditor.yml  test-repository-audit.yml
common/: sample-dependencies-workflow.yml
dotnet/: README.md
dotnet/closed/: .editorconfig
dotnet/common/: Directory.Build.props  sample-build-workflow.yml  sample-codeql-workflow.yml
ec2-shutdown/: README.md
ec2-shutdown/ec2-shutdown/: ec2-shutdown.psm1  shutdownEc2.ps1
ec2-shutdown/ec2-shutdown/lambda/: deploy.ps1
ec2-shutdown/ec2-shutdown/lambda/ec2_shutdown/: ec2_shutdown.ps1  readme.txt
edfi-repo-auditor/: .env.example  README.md  pyproject.toml  scoring.json
edfi-repo-auditor/edfi_repo_auditor/: __main__.py  __main_github_actions__.py  auditor.py  checklist.py  config.py  github_actions_auditor.py  github_client.py  html_report.py  log_helper.py  ossf_score.py  pr_metrics.py
edfi-repo-auditor/tests/: test_config.py
edfi-repo-auditor/tests/auditor/: test_audit_actions.py  test_audit_alerts.py  test_get_repo_information.py  test_get_result.py  test_github_actions_auditor.py  test_ossf_score.py  test_review_files.py
edfi-repo-auditor/tests/github_client/: test_dependabot_enabled.py  test_get_actions.py  test_get_file_content.py  test_get_pull_requests.py  test_get_repositories.py  test_get_repository_information.py  test_initialize.py
edfi-repo-auditor/tests/pr_metrics/: test_pr_duration.py  test_pr_review_cycle.py
javascript/: README.md  codeql.yml  test.yml
metrics/: .flake8  .mypy.ini  Jira-Ticket-Age.ipynb  NOTICES.md  README.md  Score Metric.ipynb  Ticket Metrics.ipynb  pyproject.toml
metrics/data/backlog-health/: 2024-03-11.csv  2024-04-29.csv  2024-05-21.csv  2024-06-05.csv  2024-06-06.csv  2024-07-03.csv  2024-08-16.csv
metrics/data/ossf-scores/: 2024-06-26.csv  2024-07-08.csv  2024-08-15.csv  2024-11-12.csv  2025-02-05.csv  2025-03-19.csv  2025-07-07.csv
metrics/data/ticket-age/: 2024-03-11.csv  2024-04-26.csv  2024-05-21.csv  2024-05-30.csv  2024-06-05.csv  2024-07-03.csv  2024-08-16.csv  2024-11-12.csv  2025-03-19.csv  2025-07-07.csv
metrics/data/ticket-age-filtered/: 2024-04-26.csv  2024-05-21.csv  2024-06-05.csv  2024-07-03.csv  2024-08-16.csv  2024-11-12.csv  2025-03-19.csv  2025-07-07.csv
metrics/edfi_tech_metrics/: backlog.py  disable_tls.py  improvements.py  jira.py  ossf_score.py  settings.py  ticket_age.py
metrics/reports/ticket-metrics/2024-03-11/: Ticket Metrics.md
python/: .mypy.ini  README.md  test.yml
