[tool.poetry]
name = "edfi-repo-auditor"
version = "0.1.0"
description = "Ed-Fi Repository Auditor"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
repository = "https://github.com/Ed-Fi-Exchange-OSS/DevSecOps"

[tool.poetry.dependencies]
python = "^3.10"
ConfigArgParse = "^1.7.1"
python-dotenv = "^1.1.0"
errorhandler = "^2.0.1"
requests = "^2.32.4"
pandas = "^2.2.0"
coverage = "^7.8.2"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.16.0"
pytest = "^8.4.1"
pytest-describe = "^2.0.1"
pytest-mock = "^3.14.1"
types-requests = "^2.32.4"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
