[tool.poetry]
name = "edfi-tech-metrics"
version = "0.1.0"
description = ""
authors = ["Stephen A. Fuqua <stephen@safnet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jira = "^3.6.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
configargparse = "^1.7"
pandas = "^2.2.1"
tzlocal = "^5.2"
termcolor = "^2.4.0"
plotnine = "^0.13.1"
ipywidgets = "^8.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
