[tool.poetry]
name = "edfi-tech-metrics"
version = "0.1.0"
description = ""
authors = ["Stephen A. Fuqua <stephen@safnet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jira = "^3.10.5"
jupyter = "^1.0.0"
python-dotenv = "^1.2.1"
configargparse = "^1.7"
pandas = "^2.3.3"
tzlocal = "^5.2"
termcolor = "^3.2.0"
plotnine = "^0.15.3"
ipywidgets = "^8.1.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^26.1.0"
mypy = "^1.19.0"
types-requests = "^2.32.4.20260107"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
